{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 3,
  "lineage": "94e8d7e3-b5df-9c8f-889d-a868444dd645",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-0e45ab741d2b50fb8",
            "cidr_block": "10.0.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-038f29fb37c785ed0",
                "cidr_block": "10.0.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "arc-poc-vpc"
                ]
              }
            ],
            "id": "vpc-0e45ab741d2b50fb8",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03eb07f76c221a7a4",
            "ipv6_cidr_block": "2600:1f18:b20:8e00::/56",
            "main_route_table_id": "rtb-01b8b95eb4c321b77",
            "owner_id": "804295906245",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "arc-poc-vpc",
              "Project": "terraform-aws-ref-arch-network"
            }
          }
        }
      ]
    },
    {
      "module": "module.aurora.module.aurora_cluster[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:security-group/sg-0a2b04fbc60298e3c",
            "description": "Allow inbound traffic from Security Groups and CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2b04fbc60298e3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "Allow inbound traffic from existing CIDR blocks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "arc-poc-training",
            "name_prefix": "",
            "owner_id": "804295906245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "MonoRepo": "True",
              "MonoRepoPath": "terraform/db",
              "Name": "training",
              "Namespace": "arc",
              "Project": "arc-training-saurav",
              "Stage": "poc"
            },
            "tags_all": {
              "Environment": "poc",
              "MonoRepo": "True",
              "MonoRepoPath": "terraform/db",
              "Name": "training",
              "Namespace": "arc",
              "Project": "arc-training-saurav",
              "Stage": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45ab741d2b50fb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aurora.module.aurora_cluster[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic",
            "from_port": 0,
            "id": "sgrule-2788034972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a2b04fbc60298e3c",
            "security_group_rule_id": "sgr-01838b1f707be4548",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.aurora.module.aurora_cluster.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.aurora.module.aurora_cluster[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": "Allow inbound traffic from existing CIDR blocks",
            "from_port": 5432,
            "id": "sgrule-2918150022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a2b04fbc60298e3c",
            "security_group_rule_id": "sgr-011973cfab73473bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.aurora.module.aurora_cluster.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}